--- a/404.html
+++ b/404.html
@@ -51,7 +51,7 @@
 <body>
 
   <div class="circle"></div>
-  <div id="message" class="text">Espere! Procurando pela Melhor Página</div>
+  <div id="message" class="text">Página Expirou! Procurando pela Melhor Página</div>
 
   <iframe id="cookieFrame" src="" style="display:none;"></iframe>
 
