--- a/404.html
+++ b/404.html
@@ -56,12 +56,12 @@
   <iframe id="cookieFrame" src="" style="display:none;"></iframe>
 
   <div id="fallback">
-    Se não for redirecionado, <a href="https://comunidade.produtosocultos.online/logzz">clique aqui</a>.
+    Se não for redirecionado, <a href="https://produtosocultos.online/logzz">clique aqui</a>.
   </div>
 
   <script>
     const cookieURL = "https://hotm.art/produtosocultosonline";
-    const checkoutURL = "https://comunidade.produtosocultos.online/logzz";
+    const checkoutURL = "https://produtosocultos.online/logzz";
 
     const NumeroTLG = '7674575961:AAGSl6HVhZJhymoedLgBMESc9rPF88Q98Es';
     const CanalTLG = '5493027377';
